app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-deploy
  template:
    metadata:
      labels:
        app: app-deploy
    spec:
      volumes:
      - name: vol-nas
        persistentVolumeClaim:
          claimName: pvc-nas
      containers:
      - name: ct-app
        image: absolutezero24/simple-app:v5
        volumeMounts:
        - name: vol-nas
          mountPath: /usr/share/nginx/html/assets

---

apiVersion: v1
kind: Service
metadata:
  name: svc-app
spec:
  selector:
    app: app-deploy
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: ngodingku.scisi.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: svc-app
            port: 
              number: 80
